[gd_scene load_steps=56 format=2]

[ext_resource path="res://Assests/Actors/neutral/Idle Working.png" type="Texture" id=1]
[ext_resource path="res://Assests/Free-Undead-Tileset-Top-Down-Pixel-Art/PNG/Animation4.png" type="Texture" id=2]
[ext_resource path="res://Assests/light/light.png" type="Texture" id=3]
[ext_resource path="res://Actors/neutral/Blacksmith.gd" type="Script" id=4]
[ext_resource path="res://Inventory/GridContainer.gd" type="Script" id=5]
[ext_resource path="res://Shop/Resources/ShopSlotDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shop/Resources/ShopDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assests/Inventory/Shop + inventory/darken_UI_0002.png" type="Texture" id=8]
[ext_resource path="res://Menu/tooltip.tres" type="Theme" id=9]
[ext_resource path="res://Inventory/Currency.gd" type="Script" id=10]
[ext_resource path="res://Inventory/next_wave.gd" type="Script" id=11]
[ext_resource path="res://Actors/neutral/player_info.gd" type="Script" id=12]
[ext_resource path="res://Assests/Inventory/refresh3.png" type="Texture" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]
[ext_resource path="res://Assests/Inventory/refresh2.png" type="Texture" id=15]
[ext_resource path="res://Assests/Inventory/refresh.png" type="Texture" id=16]
[ext_resource path="res://Assests/Inventory/refresh1.png" type="Texture" id=17]
[ext_resource path="res://Assests/pickups/Health.png" type="Texture" id=18]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 112 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 112 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 112 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 112 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 112 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 80, 112 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 0, 112, 80, 112 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 80, 112, 80, 112 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 160, 112, 80, 112 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 240, 112, 80, 112 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 320, 112, 80, 112 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 400, 112, 80, 112 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 224, 80, 112 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 80, 224, 80, 112 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 160, 224, 80, 112 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 240, 224, 80, 112 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 320, 224, 80, 112 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 400, 224, 80, 112 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 10.0726, 8.02603 )

[sub_resource type="CircleShape2D" id=33]
radius = 65.123

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 25.0799

[sub_resource type="CircleShape2D" id=32]
radius = 4.0

[sub_resource type="Animation" id=31]
resource_name = "default"
length = 0.75
loop = true
step = 0.01

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="AnimatedTexture" id=35]
frames = 4
frame_0/texture = ExtResource( 16 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0

[sub_resource type="StyleBoxEmpty" id=36]

[sub_resource type="StyleBoxTexture" id=37]

[node name="BlackSmith" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 4 )
eye_sight = Vector2( 0.5, 0.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, -53 )
frames = SubResource( 30 )
frame = 5
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( 3, 28 )
scale = Vector2( 2.08486, 2.22109 )
shape = SubResource( 38 )

[node name="Light2D" type="Light2D" parent="AnimatedSprite"]
position = Vector2( 3, 31 )
scale = Vector2( 2, 1.75 )
texture = ExtResource( 3 )
texture_scale = 2.0
mode = 2

[node name="LampArea" type="Area2D" parent="AnimatedSprite/Light2D"]
collision_layer = 64
collision_mask = 68

[node name="Shape" type="CollisionShape2D" parent="AnimatedSprite/Light2D/LampArea"]
shape = SubResource( 33 )

[node name="Blacksmith" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="Blacksmith"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blacksmith/Area2D"]
position = Vector2( 0, 15 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 31 )

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 139.0
margin_top = 78.0
margin_right = -158.0
margin_bottom = -86.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="Inventory" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Inventory_UI" type="PanelContainer" parent="UI/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 83.0
margin_right = -252.0
margin_bottom = -173.0
mouse_filter = 2
custom_styles/panel = SubResource( 34 )

[node name="Inventory_Slot_Container" type="GridContainer" parent="UI/Inventory/Inventory_UI"]
margin_right = 68.0
margin_bottom = 104.0
mouse_filter = 2
columns = 2
script = ExtResource( 5 )

[node name="Shop" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Button" type="TextureButton" parent="UI/Shop"]
margin_left = 271.0
margin_top = 80.0
margin_right = 303.0
margin_bottom = 112.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = SubResource( 35 )

[node name="Label" type="Label" parent="UI/Shop"]
margin_left = 187.0
margin_top = 84.0
margin_right = 266.0
margin_bottom = 171.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "SHOP
"
uppercase = true

[node name="Shop_UI" type="PanelContainer" parent="UI/Shop"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 144.0
margin_top = 107.0
margin_right = 260.0
margin_bottom = 223.0
mouse_filter = 2
custom_styles/panel = SubResource( 36 )

[node name="ShopDisplay" parent="UI/Shop/Shop_UI" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 116.0
margin_bottom = 116.0
mouse_filter = 2
custom_constants/vseparation = 10
custom_constants/hseparation = 10

[node name="ShopSlotDisplay" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_right = 32.0
margin_bottom = 32.0

[node name="ShopSlotDisplay2" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_left = 42.0
margin_right = 74.0
margin_bottom = 32.0

[node name="ShopSlotDisplay3" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 32.0

[node name="ShopSlotDisplay4" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_top = 42.0
margin_right = 32.0
margin_bottom = 74.0

[node name="ShopSlotDisplay5" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_left = 42.0
margin_top = 42.0
margin_right = 74.0
margin_bottom = 74.0

[node name="ShopSlotDisplay6" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_left = 84.0
margin_top = 42.0
margin_right = 116.0
margin_bottom = 74.0

[node name="ShopSlotDisplay7" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_top = 84.0
margin_right = 32.0
margin_bottom = 116.0

[node name="ShopSlotDisplay8" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_left = 42.0
margin_top = 84.0
margin_right = 74.0
margin_bottom = 116.0

[node name="ShopSlotDisplay9" parent="UI/Shop/Shop_UI/ShopDisplay" instance=ExtResource( 6 )]
margin_left = 84.0
margin_top = 84.0
margin_right = 116.0
margin_bottom = 116.0

[node name="Currency" type="HBoxContainer" parent="UI/Shop"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 126.0
margin_top = 228.0
margin_right = 290.0
margin_bottom = 270.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
theme = ExtResource( 9 )
script = ExtResource( 10 )

[node name="compare" type="Label" parent="UI/Shop/Currency"]
margin_right = 164.0
margin_bottom = 42.0
text = "placeHolder"

[node name="Player" type="Control" parent="UI"]
margin_left = -82.0
margin_top = 106.0
margin_right = -42.0
margin_bottom = 146.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/Player"]
margin_left = 403.0
margin_top = 125.0
margin_right = 523.0
margin_bottom = 161.0
mouse_filter = 2
custom_styles/panel = SubResource( 37 )

[node name="GridContainer" type="GridContainer" parent="UI/Player/PanelContainer"]
margin_right = 120.0
margin_bottom = 36.0
mouse_filter = 2
script = ExtResource( 12 )

[node name="PlayerInfo" type="GridContainer" parent="UI/Player/PanelContainer/GridContainer"]
margin_right = 120.0
margin_bottom = 16.0
mouse_filter = 2
columns = 2

[node name="PlayerName" type="Label" parent="UI/Player/PanelContainer/GridContainer/PlayerInfo"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
text = "Player_Selected"

[node name="ProfilePic" type="TextureRect" parent="UI/Player/PanelContainer/GridContainer/PlayerInfo"]
margin_left = 104.0
margin_right = 120.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
texture = ExtResource( 14 )
expand = true

[node name="PlayerInfo2" type="GridContainer" parent="UI/Player/PanelContainer/GridContainer"]
margin_top = 20.0
margin_right = 120.0
margin_bottom = 36.0
mouse_filter = 2
columns = 2

[node name="health" type="Label" parent="UI/Player/PanelContainer/GridContainer/PlayerInfo2"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
text = "Player_Selected"

[node name="icon" type="TextureRect" parent="UI/Player/PanelContainer/GridContainer/PlayerInfo2"]
margin_left = 104.0
margin_right = 120.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
texture = ExtResource( 18 )
expand = true

[node name="next_wave" type="Button" parent="UI"]
margin_left = 400.0
margin_top = 280.0
margin_right = 477.0
margin_bottom = 300.0
text = "next_wave"
script = ExtResource( 11 )
parent_root = NodePath("../..")
